--- a/views/Life.ejs
+++ b/views/Life.ejs
@@ -12,6 +12,16 @@
             along with heavily biased pay as men got paid double the amount the women would get and children which in its own right isn't a good thing don't get paid nearly as much as women. Back to the hazards of factories, the safety of the workers
             were nonexistent which led to many work place injuries and death, which as sad as it is was a common occurrence. With odds of dying in a factory being 1 in 50, to put that in perspective you had better chances surviving World War II with a
             death rate of 1 in 58 </p>
+        <br>
+        <p> The home lives of people during this time was not much better. Most of the people during this time lived in slums of cities in tiny cramped houses with public bathrooms and open showers. During this time there was also the rise of the middle class
+            with people getting specialized in being a doctor, a lawyer or a shop clerk. These people had it good compared to the but nowhere near as good as the upper class. The upper class during this time were often politicians and factory owners and
+            made money from the stock market.
+        </p>
+        <br>
+        <p> Thanks to new inventions like the Steam Engine or the Telegraph which has allowed us to make new things like the steam train which made cross country travel much much shorter or the Telegraph which allows near instantaneous communication across
+            the globe. Some more tangible things that most people could afford was the powered and unpowered loom which allowed even the most unskilled of workers to weave fabric and create multiple spools of wool ready to be made into clothes.
+        </p>
+
 
     </main>
     <%- include ('footer.ejs')%>
