--- a/views/Life.ejs
+++ b/views/Life.ejs
@@ -4,9 +4,14 @@
         <title>Life</title>
     </head>
     <main>
-        <h1>Life</h1>
+        <h1 style="display: flex; justify-content: center;">Life</h1>
 
-        <h1>This is a Test </h1>
+        <img style="width:50%; display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: fit-content;" src="slums.jpg" alt="Image of Slums" sizes="100hv">
+        <br>
+        <small style="display: flex; justify-content: center;">Victorian London streets with terraces, Gustave Doré, 1872. From &nbsp<a href="https://www.historytoday.com/miscellanies/desolation-row-victorian-britain%E2%80%99s-sensational-slums">Study.com</a> </small>
         <p>With production on the rise people moved north to find work in factories. Factories are not as glamorous as people at the time would believe. Though factories were a good source of money the factories themselves came with a whole new set of problems.
             Factory workers often had to work 14 - 16 hours a day with only one day off, but long hours were not the only things that these workers had to deal with. Unfair pay and hazardous work places were some of the things that they had to deal with
             along with heavily biased pay as men got paid double the amount the women would get and children which in its own right isn't a good thing don't get paid nearly as much as women. Back to the hazards of factories, the safety of the workers
