--- a/views/Polution.ejs
+++ b/views/Polution.ejs
@@ -5,11 +5,11 @@
     </head>
 
     <main>
-        <h1>Production</h1>
+        <h1>Polution</h1>
 
         <h1>The Affectes of Pollution During The Industrial Revolution </h1>
         <small>    Image Donated by Corbis - Bettmann to ExplorePAHistory </small>
-        <img src="pollution title picture.jpg" alt="Pollution">
+        <img src="pollution title picture.jpg" alt="Pollution" style="justify-content: center;">
         <p>Hello World</p>
     </main>
     <%- include ('footer.ejs')%>
