Production update index update

--- a/views/Production.ejs
+++ b/views/Production.ejs
@@ -4,10 +4,23 @@
         <title class="sidenavtitle">Production</title>
     </head>
     <main>
-        <h1>Production</h1>
 
-        <h1 style="text-align: center;">Production Results From The Industrial Revolution</h1>
-        <img src="car production.jpg" style="width: 1080px; ">
+        <h1 style="width:50%; display: block;
+        margin-left: auto;
+        margin-right: auto;">Production Results From The Industrial Revolution</h1>
+        <img src="car production.jpg" style="width: 100vw; display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 0rem;">
+        <small style="width: 100vw; display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 0rem;">Toyota assembly line <br>
+            Robotic welding on the automobile assembly line at the Toyota Motor Corporation, Japan. <br> From <a href="https://www.britannica.com/technology/assembly-line">Britannica</a></small>
+
+        <body>
+
+        </body>
         <p>There was a massive increase in the number of factory jobs during the Industrial revolution, which many of them had to do with producing goods. With the use of machines, they no longer needed to have skilled artisans hand make every product. This
             gradually resulted in unskilled laborers helping in factories to mass produce goods and also made the price of goods drop. Another key invention during this time was Thomas Newcomen’s steam engine which boosted the production of products such
             as flour, paper, cotton mills, and distilleries. Some other inventions that made production faster include: flying shuttle, the water frame, and the power loom. While machines were very helpful to increasing production they also had some problems
@@ -21,6 +34,9 @@
         <br>
         <p>This relates very well with what Carr said in his piece. The inventions listed above all were very important to increasing production. Carr says that once an invention is introduced it can not be taken out without collapsing society. The steam
             engine is a great example of this because while we don’t really use them anymore we use more advanced versions of them. He says that we keep advancing the technology and make it more and more advantageous for us. The Industrial Revolution
-            backs up what Carr says well and shows that us as humans want to keep making things easier. </p>
+            backs up what Carr says well and shows that us as humans want to keep making things easier. While inventions such as the loom made it easier to mass produce clothing, many people then lost the ability to hand sew things because there was really
+            no point of making clothes by hand anymore. We can see this happening with our navigation skills because of our phones. Since most people have a phone they can just look up directions on how to get where they want without actually having to
+            use any type of navigation skills. Like Carr says this causes us to rely heavily on technology to do skills we used to have to do by hand.
+        </p>
     </main>
     <%- include ('footer.ejs')%>
