--- a/views/index.ejs
+++ b/views/index.ejs
@@ -125,7 +125,10 @@
 </head>
 
 
-<h1 class="title">Welcome To Jacob and Antonio's BIP Project</h1><br>
+<h1 class="title" style="font-size: 6em;">Welcome To Jacob and Antonio's BIP Project</h1><br>
+
+<b class="title" style="font-size: 3em;"> In this project we discuse different problems that plaiged the industrial revolution and how it compares to living in 2020</b>
+
 
 
 
