--- a/views/style.css
+++ b/views/style.css
@@ -12,7 +12,11 @@ body {
     color: black;
     background-color: white;
     margin: 0;
-    padding: 0;
+    overflow-x: hidden;
+}
+
+p {
+    padding: 1rem;
 }
 
 body::-webkit-scrollbar {
@@ -29,7 +33,6 @@ body::-webkit-scrollbar-thumb {
 
 main {
     margin-left: 5rem;
-    padding: 1rem;
 }
 
 .navbar {
