--- a/views/style.css
+++ b/views/style.css
@@ -114,7 +114,7 @@ main {
 
 /*Small Screen*/
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 7in) {
     .navbar {
         bottom: 0;
         width: 100vw;
@@ -134,7 +134,7 @@ main {
 
 /*Large Screen*/
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 7in) {
     .navbar {
         top: 0;
         width: 5rem;
