--- a/views/Life.ejs
+++ b/views/Life.ejs
@@ -4,12 +4,10 @@
         <title>Life</title>
     </head>
     <main>
-        <h1 style="display: flex; justify-content: center;">Life</h1>
-
-        <img style="width:50%; display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: fit-content;" src="slums.jpg" alt="Image of Slums" sizes="100hv">
+        <div class="img-container">
+            <img style="width:100vw;" src="slums.jpg" alt="Image of Slums" sizes="100hv">
+            <h1 class="img-text">Life During The Industrial Revolution</h1>
+        </div>
         <br>
         <small style="display: flex; justify-content: center;">Victorian London streets with terraces, Gustave Doré, 1872. From &nbsp<a href="https://www.historytoday.com/miscellanies/desolation-row-victorian-britain%E2%80%99s-sensational-slums">Study.com</a> </small>
         <p>With production on the rise people moved north to find work in factories. Factories are not as glamorous as people at the time would believe. Though factories were a good source of money the factories themselves came with a whole new set of problems.
@@ -19,8 +17,8 @@
             death rate of 1 in 58 </p>
         <br>
         <p> The home lives of people during this time was not much better. Most of the people during this time lived in slums of cities in tiny cramped houses with public bathrooms and open showers. During this time there was also the rise of the middle class
-            with people getting specialized in being a doctor, a lawyer or a shop clerk. These people had it good compared to the but nowhere near as good as the upper class. The upper class during this time were often politicians and factory owners and
-            made money from the stock market.
+            with people who were specialized in new roles thanks to mass production. These jobs were those of doctors, lawyers and shop clerks. These people had it good compared to the working class but nowhere near as good as the upper class. The upper
+            class during this time were often politicians and factory owners and made money from their factories and the stock market, which gave them to oportunity to win big or lose hard.
         </p>
         <br>
         <p> Thanks to new inventions like the Steam Engine or the Telegraph which has allowed us to make new things like the steam train which made cross country travel much much shorter or the Telegraph which allows near instantaneous communication across
