--- a/views/Production.ejs
+++ b/views/Production.ejs
@@ -5,26 +5,20 @@
     </head>
     <main>
 
-        <h1 style="width:50%; display: block;
-        margin-left: auto;
-        margin-right: auto;">Production Results From The Industrial Revolution</h1>
-        <img src="car production.jpg" style="width: 100vw; display: block;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 0rem;">
-        <small style="width: 100vw; display: block;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 0rem;">Toyota assembly line <br>
+        <div class="img-container">
+            <img src="car production.jpg" style="width: 100vw;padding: 0rem;">
+            <h1 class="img-text">Results of Production During The Industrial Revolution</h1>
+        </div>
+        <small style="left: 55%;top: 0;transform: translateX(50%);">Toyota assembly line <br>
             Robotic welding on the automobile assembly line at the Toyota Motor Corporation, Japan. <br> From <a href="https://www.britannica.com/technology/assembly-line">Britannica</a></small>
 
         <body>
 
         </body>
         <p>There was a massive increase in the number of factory jobs during the Industrial revolution, which many of them had to do with producing goods. With the use of machines, they no longer needed to have skilled artisans hand make every product. This
-            gradually resulted in unskilled laborers helping in factories to mass produce goods and also made the price of goods drop. Another key invention during this time was Thomas Newcomen’s steam engine which boosted the production of products such
-            as flour, paper, cotton mills, and distilleries. Some other inventions that made production faster include: flying shuttle, the water frame, and the power loom. While machines were very helpful to increasing production they also had some problems
-            they brought along.
+            gradually resulted in unskilled laborers helping in factories to mass produce goods which led to the price of goods dropping. Another key invention during this time was Thomas Newcomen’s steam engine which boosted the production of products
+            such as flour, paper, cotton mills, and distilleries. Some other inventions that made production faster include: flying shuttle, the water frame, and the power loom. While machines were very helpful to increasing production they also had some
+            problems they brought along.
         </p>
         <br>
         <p>Interchangeable parts also played a massive role in increasing production. The use of interchangeable parts allowed them to make machines with the same parts and thus if they were to have a part break they could fix it without having to spend
