--- a/views/header.ejs
+++ b/views/header.ejs
@@ -18,9 +18,9 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="polution" class="nav-link">
+                <a href="pollution" class="nav-link">
                     <i class="fas fa-biohazard fa-primary fa-secondary"></i>
-                    <span class="link-text">Polution</span>
+                    <span class="link-text">Pollution</span>
                 </a>
             </li>
             <li class="nav-item">
