--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,8 @@
             display: block;
             text-align: center;
             color: #b6b6b6;
+            margin-left: 5vw;
+            margin-right: 5vw;
         }
         
         body {
@@ -50,7 +52,7 @@
         }
         
         ul li a .fa-custome {
-            font-size: 6em;
+            font-size: 10em;
         }
         
         ul li::before {
@@ -58,7 +60,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            font-size: 6em;
+            font-size: 10em;
             height: 0;
             overflow: hidden;
             transition: 500ms ease-in-out;
@@ -128,7 +130,14 @@
 <h1 class="title" style="font-size: 6em;">Welcome To Jacob and Antonio's BIP Project</h1><br>
 
 <b class="title" style="font-size: 3em;"> In this project we discuse different problems that plaiged the industrial revolution and how it compares to living in 2020</b>
-
+<br><br>
+<p class="title" style="font-size: 1.5em; margin-left: 10vw; margin-right: 10vw;">The Industrial Revolution was a time period between 1760 and 1840. During this time period the use of machines were introduced to start manufacturing at speeds never seen before. Before machines all goods had to be made by hand which led to them being
+    more expensive due to the time it took to make them. These machines led to the beginning of cities and also allowed people that were uneducated get good paying factory jobs. Although there were many advantages that came with the industrial revolution
+    there were many problems that came along with it such as dangerous working conditions, pollution, and poor home life. The Industrial Revolution is a wicked problem in itself because it brought cheaper products and better paying jobs while also causing
+    an increase to environmental damage and danger. Much like any other wicked problem it solved some of the problems we were facing while creating new problems in the process. </p>
+<br>
+<br>
+<br>
 
 
 
@@ -138,7 +147,7 @@
         <ul>
 
             <li>
-                <a href="polution">
+                <a href="pollution">
                     <i class="fas fa-biohazard fa-primary fa-secondary fa-custome"></i>
 
                 </a>
@@ -160,7 +169,7 @@
     <umm>
         <ul>
             <li class="two">
-                <a href="polution">
+                <a href="pollution">
                     <i class="fas fa-biohazard fa-primary fa-secondary fa-custome"></i>
 
                 </a>
