index spell fixes life update

--- a/views/Life.ejs
+++ b/views/Life.ejs
@@ -14,15 +14,18 @@
             Factory workers often had to work 14 - 16 hours a day with only one day off, but long hours were not the only things that these workers had to deal with. Unfair pay and hazardous work places were some of the things that they had to deal with
             along with heavily biased pay as men got paid double the amount the women would get and children which in its own right isn't a good thing don't get paid nearly as much as women. Back to the hazards of factories, the safety of the workers
             were nonexistent which led to many work place injuries and death, which as sad as it is was a common occurrence. With odds of dying in a factory being 1 in 50, to put that in perspective you had better chances surviving World War II with a
-            death rate of 1 in 58 </p>
+            death rate of 1 in 58. This neglegence was expecially true when it came to children. Due to their small frame they were able to slip into places that most adults could not</p>
         <br>
         <p> The home lives of people during this time was not much better. Most of the people during this time lived in slums of cities in tiny cramped houses with public bathrooms and open showers. During this time there was also the rise of the middle class
             with people who were specialized in new roles thanks to mass production. These jobs were those of doctors, lawyers and shop clerks. These people had it good compared to the working class but nowhere near as good as the upper class. The upper
             class during this time were often politicians and factory owners and made money from their factories and the stock market, which gave them to oportunity to win big or lose hard.
         </p>
         <br>
-        <p> Thanks to new inventions like the Steam Engine or the Telegraph which has allowed us to make new things like the steam train which made cross country travel much much shorter or the Telegraph which allows near instantaneous communication across
-            the globe. Some more tangible things that most people could afford was the powered and unpowered loom which allowed even the most unskilled of workers to weave fabric and create multiple spools of wool ready to be made into clothes.
+        <p>
+            The safety of factory works relates heavily back to the video "The Monkey Business Illusion" and the TED Talk "Does money make you mean? | Paul Piff". The whole situation with the factory workers is the excat thing that Piff was talking about. THe factory
+            owners have closed off their hearts in the persute of money. This is backed up by the Invisible illution which is when someone consectrates on one thing that they miss key details ok when they find one they still are missing many more. These
+            two things combined paints the picture that once people learned of the weath that could be made off of factories, the owners got too focused on making money that they were not able to see the pain and suffering that was happening and stopped
+            seeing or caring about it. Even though factories are a great opportunity to make money i was also a very unnecessarily risky leading to the unnecessary loss of life
         </p>
 
 
