--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,18 @@
             box-sizing: border-box;
         }
         
+        .navbar::-webkit-scrollbar {
+            width: 0.25rem
+        }
+        
+        .navbar::-webkit-scrollbar-track {
+            background: #1e1e24;
+        }
+        
+        .navbar::-webkit-scrollbar-thumb {
+            background: #6649b8
+        }
+        
         .title {
             top: auto;
             justify-content: center;
@@ -25,7 +37,7 @@
         body {
             min-height: 100vh;
             background: #23232e;
-            overflow: hidden;
+            overflow: scroll;
             align-items: center;
         }
         
@@ -129,12 +141,12 @@
 
 <h1 class="title" style="font-size: 6em;">Welcome To Jacob and Antonio's BIP Project</h1><br>
 
-<b class="title" style="font-size: 3em;"> In this project we discuse different problems that plaiged the industrial revolution and how it compares to living in 2020</b>
+<b class="title" style="font-size: 3em;"> In this project we discuse different problems that plagued the Industrial Revolution</b>
 <br><br>
-<p class="title" style="font-size: 1.5em; margin-left: 10vw; margin-right: 10vw;">The Industrial Revolution was a time period between 1760 and 1840. During this time period the use of machines were introduced to start manufacturing at speeds never seen before. Before machines all goods had to be made by hand which led to them being
-    more expensive due to the time it took to make them. These machines led to the beginning of cities and also allowed people that were uneducated get good paying factory jobs. Although there were many advantages that came with the industrial revolution
-    there were many problems that came along with it such as dangerous working conditions, pollution, and poor home life. The Industrial Revolution is a wicked problem in itself because it brought cheaper products and better paying jobs while also causing
-    an increase to environmental damage and danger. Much like any other wicked problem it solved some of the problems we were facing while creating new problems in the process. </p>
+<p class="title" style="font-size: 1.5em; margin-left: 10vw; margin-right: 10vw;">The Industrial Revolution was the time period between 1760 and 1840. During this time period the use of machines was introduced in order to increase the speed of manufacturing of which had never seen before. Before the utilization of machines, all goods
+    had to be made by hand, which was a slow plocess that caused goods to be more expensive. Machines led to the beginning of cities and also allowed uneducated people to get factory jobs. Although there were advantages to the Industrial Revolution, there
+    were many problems that came along with it, such as dangerous working conditions, pollution and poor home life. The Industrial Revolution is a wicked because it brought cheaper products and more jobs opportunities, but causing an increase in environmental
+    damage and danger. some problems of the time were solved, but new isuses were created as well. </p>
 <br>
 <br>
 <br>
