--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,7 +4,7 @@
 <head>
     <script src="https://kit.fontawesome.com/9d9a3de7f3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
 <body>
@@ -33,12 +33,6 @@
                 <a href="production" class="nav-link">
                     <i class="fas fa-tools fa-primary fa-secondary"></i>
                     <span class="link-text">Production</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="welcome" class="nav-link">
-                    <i class="fas fa-times-circle fa-primary fa-secondary"></i>
-                    <span class="link-text">Exit</span>
                 </a>
             </li>
         </ul>
